--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+}
+
 .display-image {
 	width: 400px;
 	height: 300px;
