FIX: separating logic in functions

--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,14 @@ body {
 	border: 1px solid black;
 	background-size: cover;
 }
+
+.is-disabled {
+	color: currentColor;
+	cursor: not-allowed;
+	opacity: 0.5;
+	text-decoration: none;
+}
+
+.display-image {
+	display: block;
+}
