--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
 	text-align: center;
 }
 
+.header__title {
+	font-size: 40px;
+}
+
 .main {
 	margin: 2em;
 }
@@ -32,8 +36,8 @@ body {
 
 .canvas {
 	display: block;
-	width: 1000px;
-	height: 500px;
+	width: 100rem;
+	height: 40rem;
 	margin-right: auto;
 	margin-left: auto;
 	border: 2px dashed black;
@@ -43,7 +47,7 @@ body {
 
 .link {
 	display: block;
-	width: 30%;
+	width: 16rem;
 	margin-right: auto;
 	margin-left: auto;
 	text-align: center;
@@ -68,4 +72,14 @@ body {
 	cursor: not-allowed;
 	opacity: 0.5;
 	text-decoration: none;
+}
+
+@media only screen and (max-width: 1000px) {
+	.header__title {
+		font-size: 14px;
+	}
+	.canvas {
+		width: 50rem;
+		height: 30rem;
+	}
 }
